# dadaia-tools

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
APIs/how_to_use/: index.html
APIs/kafka_admin/: index.html
APIs/kafka_client/: index.html
APIs/redis_client/: index.html
dadaia_tools/: azure_storage_blob_admin.py  azure_storage_table_client.py  kafka_admin.py  kafka_client.py  redis_client.py  singleton.py
docs/: index.md
docs/APIs/: how_to_use.md  kafka_admin.md  kafka_client.md  redis_client.md
tests/: send_data_to_kafka.py  test_azure_key_vault_client.py  test_azure_storage_blob_admin.py  test_azure_storage_blob_client.py  test_azure_storage_queue_client.py  test_azure_storage_table_client.py  test_etherscan_client.py  test_kafka_admin.py  test_kafka_client.py  test_redis_client.py
