[tool.poetry]
name = "dadaia-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.0"
mkdocs-material = "^9.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"
markers = [
    "insert_key_obj_get_key_obj: insert_key_obj_get_key_obj",
    "get_key_obj: get_key_obj",
    "insert_key_obj: insert_key_obj",
    "constructor: constructor",
    "parametrizado: parametrizado",
    "last_tests: last_tests",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=dadaia_tools -vv"
post_test = "coverage html && firefox htmlcov/index.html"
